# mreg-rust

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  auth-scopes.example.json  diesel.toml
.github/workflows/: ci.yml  pr-bench.yml
benches/: attachment_graph_delete_criterion.rs  audit_record_serialize_callgrind.rs  authenticate_bearer_criterion.rs  authz_request_build_callgrind.rs  cidr_membership_callgrind.rs  cidr_value_validation_callgrind.rs  dhcp_export_context_build_criterion.rs  dns_name_validation_callgrind.rs  domain_event_serialize_callgrind.rs  email_address_validation_callgrind.rs  export_template_bind_forward_zone_callgrind.rs  export_template_bind_reverse_zone_callgrind.rs  export_template_dhcp_canonical_json_callgrind.rs  export_template_isc_dhcpd4_fragment_callgrind.rs  export_template_isc_dhcpd4_full_callgrind.rs  export_template_isc_dhcpd6_fragment_callgrind.rs  export_template_isc_dhcpd6_full_callgrind.rs  export_template_kea_dhcp4_fragment_callgrind.rs  export_template_kea_dhcp4_full_callgrind.rs  export_template_kea_dhcp6_fragment_callgrind.rs  export_template_kea_dhcp6_full_callgrind.rs  filter_sql_compile_callgrind.rs  host_delete_ptr_cascade_criterion.rs  host_detail_assembly_criterion.rs  host_filter_parse_callgrind.rs  host_lookup_by_name_criterion.rs  hostname_validation_callgrind.rs  import_batch_resolve_callgrind.rs  import_batch_run_criterion.rs  inventory_operations_criterion.rs  ip_address_validation_callgrind.rs  ip_allocation_matrix_criterion.rs  jwt_issue_callgrind.rs  jwt_validate_callgrind.rs  label_name_validation_callgrind.rs  mac_address_validation_callgrind.rs  network_detail_assembly_criterion.rs  page_request_deserialize_callgrind.rs  principal_key_derive_callgrind.rs  rdata_render_callgrind.rs  (+11 more)
benches/support/: mod.rs
docs/: api-compatibility.md  api-differences.md  architecture.md  authentication.md  authorization.md  authz-action-matrix.md  authz-contract.md  comparison-with-django-mreg.md  configuration.md  dhcp-and-attachments.md  domain-catalog.md  event-system.md  export-templating.md  host-policy.md  import-format.md  logging.md  migration-backlog.md  migration-guide.md  pagination-sort-filter.md  rr-standards.md  storage-layer.md  task-system.md  type-driven-design.md  wildcard-dns.md
migrations/00000000000001_initial_schema/: down.sql  up.sql
scripts/: test-treetop-authz.sh
src/: config.rs  errors.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/v1/: attachment_community_assignments.rs  attachments.rs  auth.rs  authz.rs  bacnet_ids.rs  communities.rs  dns.rs  host_community_assignments.rs  host_contacts.rs  host_groups.rs  hosts.rs  labels.rs  mod.rs  nameservers.rs  network_policies.rs  networks.rs  ptr_overrides.rs  system.rs  workflows.rs
src/audit/: mod.rs
src/authn/: forward.rs  jwt.rs  ldap.rs  local.rs  mod.rs
src/authz/: actions.rs  mod.rs
src/db/: mod.rs  models.rs  schema.rs
src/domain/: attachment.rs  bacnet.rs  builtin_export_templates.rs  community.rs  exports.rs  host.rs  host_community_assignment.rs  host_contact.rs  host_group.rs  host_policy.rs  host_view.rs  imports.rs  label.rs  mod.rs  nameserver.rs  network.rs  network_policy.rs  pagination.rs  ptr_override.rs  record_validation.rs  tasks.rs  zone.rs
src/domain/builtin_types/: aliases.rs  core_names.rs  mail.rs  misc.rs  mod.rs  security.rs  text_service.rs  tls_crypto.rs
src/domain/filters/: apply.rs  bacnet_id.rs  community.rs  host.rs  host_contact.rs  host_group.rs  mod.rs  network.rs  network_policy.rs  operators.rs  ptr_override.rs  record.rs  sql.rs
src/domain/resource_records/: field_schema.rs  instances.rs  mod.rs  ownership.rs  raw_rdata.rs  type_definition.rs  type_schema.rs
src/domain/types/: addresses.rs  dns_names.rs  encoded.rs  identifiers.rs  mod.rs  numerics.rs  record_values.rs  update_field.rs
src/events/: amqp.rs  mod.rs  redis.rs  webhook.rs
src/exports/: mod.rs
src/imports/: mod.rs
src/middleware/: authn.rs  mod.rs  request_id.rs  root_span.rs
src/services/: attachments.rs  bacnet.rs  communities.rs  exports.rs  host_community_assignments.rs  host_contacts.rs  host_groups.rs  host_policy.rs  host_views.rs  hosts.rs  imports.rs  labels.rs  mod.rs  nameservers.rs  network_policies.rs  networks.rs  ptr_overrides.rs  records.rs  tasks.rs  zones.rs
src/storage/: attachment_community_assignments.rs  attachments.rs  audit_store.rs  auth_sessions.rs  bacnet.rs  communities.rs  exports_store.rs  has_id.rs  host_community_assignments.rs  host_contacts.rs  host_groups.rs  host_policy_store.rs  host_views_store.rs  hosts.rs  import_helpers.rs  imports_store.rs  labels.rs  mod.rs  nameservers.rs  network_policies.rs  networks.rs  ptr_overrides.rs  readable.rs  records.rs  tasks.rs  zones.rs
src/storage/memory/: attachments.rs  audit.rs  auth_sessions.rs  bacnet.rs  communities.rs  exports.rs  host_community_assignments.rs  host_contacts.rs  host_groups.rs  host_policy.rs  host_views.rs  hosts.rs  imports.rs  labels.rs  mod.rs  nameservers.rs  network_policies.rs  networks.rs  ptr_overrides.rs  records.rs  tasks.rs  transaction.rs  zones.rs
src/storage/postgres/: attachments.rs  audit.rs  auth_sessions.rs  bacnet_ids.rs  communities.rs  exports.rs  helpers.rs  host_community_assignments.rs  host_contacts.rs  host_groups.rs  host_policy.rs  host_views.rs  hosts.rs  imports.rs  labels.rs  mod.rs  nameservers.rs  network_policies.rs  networks.rs  ptr_overrides.rs  records.rs  tasks.rs  transaction.rs
src/storage/tx/: attachment_community_assignments.rs  attachments.rs  audit.rs  bacnet.rs  communities.rs  host_community_assignments.rs  (+12 more)
src/tasks/: mod.rs
src/workers/: mod.rs
tests/: api_contract_memory.rs  authentication.rs  dual_backend.rs  filter_operators.rs  filter_validation.rs  filtering.rs  pagination.rs  postgres_storage.rs  rr_validation.rs  sorting.rs  transaction_atomicity.rs
tests/common/: mod.rs
tests/treetop/: docker-compose.yml  mreg.cedar
tests/treetop_authz/: common.rs  fixtures.rs  main.rs  mutations.rs  reads.rs  system.rs  workers.rs
(+23 files in other folders)
