[package]
name = "mreg-rust"
version = "0.1.0"
edition = "2024"

[features]
default = ["rustls"]
rustls = ["actix-web/rustls-0_23", "dep:rustls", "dep:rustls-pemfile"]
openssl = ["actix-web/openssl", "dep:openssl"]
amqp = ["dep:lapin"]
redis = ["dep:redis"]
ldap = ["dep:ldap3"]
# Exposes a handful of internal helpers (response builders, template rendering)
# as `pub` for the benchmarks under `benches/`. Off by default so production
# library builds keep these crate-internal.
bench-helpers = []

[dependencies]
actix-web = "4.11.0"
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }
openssl = { version = "0.10", optional = true }
async-trait = "0.1.89"
argon2 = "0.5.3"
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
diesel_migrations = "2.2.0"
email_address = "0.2.9"
ipnet = { version = "2.11.0", features = ["serde"] }
macaddr = "1.0.1"
minijinja = { version = "2.12.0", features = ["loader", "json"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
actix-governor = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
treetop-client = { git = "https://github.com/terjekv/treetop-client", rev = "075ba3e26b07ef601fe2d3e167a905fdb65241d8" }
tracing = "0.1.41"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
hickory-proto = "0.24"
utoipa = { version = "5", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
lapin = { version = "2", optional = true }
redis = { version = "0.27", features = ["tokio-comp", "streams"], optional = true }
jsonwebtoken = "9.3.1"
ldap3 = { version = "0.12.1", optional = true, default-features = false, features = ["tls-rustls-ring"] }
rand = "0.8"

[dev-dependencies]
actix-http = "3"
rstest = "0.25"
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }
iai-callgrind = "0.16.1"
serde_urlencoded = "0.7"
# Self-dep activates `bench-helpers` for tests/benches/examples while keeping
# it off for the library's production build (`cargo build`/`cargo run`).
mreg-rust = { path = ".", features = ["bench-helpers"] }

[[bench]]
name = "inventory_operations_criterion"
harness = false

[[bench]]
name = "record_validation_callgrind"
harness = false

[[bench]]
name = "authz_request_build_callgrind"
harness = false

[[bench]]
name = "dns_name_validation_callgrind"
harness = false

[[bench]]
name = "hostname_validation_callgrind"
harness = false

[[bench]]
name = "zone_name_validation_callgrind"
harness = false

[[bench]]
name = "cidr_value_validation_callgrind"
harness = false

[[bench]]
name = "ip_address_validation_callgrind"
harness = false

[[bench]]
name = "mac_address_validation_callgrind"
harness = false

[[bench]]
name = "label_name_validation_callgrind"
harness = false

[[bench]]
name = "email_address_validation_callgrind"
harness = false

[[bench]]
name = "record_validation_address_callgrind"
harness = false

[[bench]]
name = "record_validation_mail_callgrind"
harness = false

[[bench]]
name = "record_validation_security_callgrind"
harness = false

[[bench]]
name = "record_kind_projection_callgrind"
harness = false

[[bench]]
name = "jwt_issue_callgrind"
harness = false

[[bench]]
name = "jwt_validate_callgrind"
harness = false

[[bench]]
name = "authenticate_bearer_criterion"
harness = false

[[bench]]
name = "host_filter_parse_callgrind"
harness = false

[[bench]]
name = "record_filter_parse_callgrind"
harness = false

[[bench]]
name = "export_template_bind_forward_zone_callgrind"
harness = false

[[bench]]
name = "export_template_bind_reverse_zone_callgrind"
harness = false

[[bench]]
name = "export_template_dhcp_canonical_json_callgrind"
harness = false

[[bench]]
name = "export_template_kea_dhcp4_fragment_callgrind"
harness = false

[[bench]]
name = "export_template_kea_dhcp4_full_callgrind"
harness = false

[[bench]]
name = "export_template_kea_dhcp6_fragment_callgrind"
harness = false

[[bench]]
name = "export_template_kea_dhcp6_full_callgrind"
harness = false

[[bench]]
name = "export_template_isc_dhcpd4_fragment_callgrind"
harness = false

[[bench]]
name = "export_template_isc_dhcpd4_full_callgrind"
harness = false

[[bench]]
name = "export_template_isc_dhcpd6_fragment_callgrind"
harness = false

[[bench]]
name = "export_template_isc_dhcpd6_full_callgrind"
harness = false

[[bench]]
name = "import_batch_resolve_callgrind"
harness = false

[[bench]]
name = "import_batch_run_criterion"
harness = false

[[bench]]
name = "host_detail_assembly_criterion"
harness = false

[[bench]]
name = "network_detail_assembly_criterion"
harness = false

[[bench]]
name = "zone_export_context_build_criterion"
harness = false

[[bench]]
name = "dhcp_export_context_build_criterion"
harness = false

[[bench]]
name = "record_listing_criterion"
harness = false

[[bench]]
name = "host_delete_ptr_cascade_criterion"
harness = false

[[bench]]
name = "attachment_graph_delete_criterion"
harness = false

[[bench]]
name = "page_request_deserialize_callgrind"
harness = false

[[bench]]
name = "filter_sql_compile_callgrind"
harness = false

[[bench]]
name = "principal_key_derive_callgrind"
harness = false

[[bench]]
name = "rdata_render_callgrind"
harness = false

[[bench]]
name = "cidr_membership_callgrind"
harness = false

[[bench]]
name = "domain_event_serialize_callgrind"
harness = false

[[bench]]
name = "audit_record_serialize_callgrind"
harness = false

[[bench]]
name = "wildcard_zone_match_criterion"
harness = false

[[bench]]
name = "ip_allocation_matrix_criterion"
harness = false

[[bench]]
name = "zone_serial_bump_criterion"
harness = false

[[bench]]
name = "host_lookup_by_name_criterion"
harness = false
